# multiprocess-wordsearch

./: .gitignore  CMakeLists.txt  config.h.in  readme.md
include/: bruteProcessor.h  config.h  cudaProcessor.h  cudaWorker.h  openmpProcessor.h  openmpiProcessor.h  processor.h  table.h
src/: bruteProcessor.cpp  cudaProcessor.cpp  cudaWorker.cu  main.cpp  openmpProcessor.cpp  openmpiProcessor.cpp  openmpiWorker.cpp  processor.cpp  table.cpp
